--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
-    "ws": "^8.6.0"
+    "socket.io": "^4.5.1",
+    "ws": "^8.7.0"
   }
 }
