--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,12 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.8",
+    "install": "^0.13.0",
+    "npm": "^8.11.0",
+    "socket.io-client": "^4.5.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
